--- a/lab1.html
+++ b/lab1.html
@@ -2,10 +2,15 @@
 	<head>
 		<title>Лаба 1</title>
 		<link rel="stylesheet" href="style.css"></link>
-		<script src="matrix.js"></script>
+		<script src="script/matrix.js"></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+		<script src="script/lab1.js"></script>
 	</head>
 	<body>
 		<h1><a href='index.html'>Лаба 1</a></h1>
+		Система \(Ax=b\).<br>
+		\(A\) = <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle"></textarea><br>
+		\(b\) = <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle"></textarea>
+		<br><br><button>Вычислить \(x\)</button>
 	</body>
 </html>
