--- a/lab1.html
+++ b/lab1.html
@@ -8,9 +8,10 @@
 	</head>
 	<body>
 		<h1><a href='index.html'>Лаба 1</a></h1>
-		Система \(Ax=b\).<br>
-		\(A\) = <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle"></textarea><br>
-		\(b\) = <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle"></textarea>
-		<br><br><button>Вычислить \(x\)</button>
+		Система \(Ax=b\).<!--br>
+		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle"></textarea><br>
+		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle"></textarea-->
+		\(M=\)  <textarea id='matrix_M' style="width:3cm;height:3cm;vertical-align:middle"></textarea>
+		<br><br><button onclick="go()">Вычислить \(x\)</button><br><br>
 	</body>
 </html>
