--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Лабораторные работы по вычистительной математике</h1>
 		<ol>
-			<li><a href="lab1.html">???</a></li>
+			<li><a href="casual_gaus.html">???</a></li>
 		</ol>
 	</body>
 </html>
