--- a/equation_solver.html
+++ b/equation_solver.html
@@ -17,9 +17,8 @@
 			<option value='casual_gaus()'>Обычный метод Гаусса</option>
 			<option value='LU_transform()'>Через LU разложение</option>
 		</select><br><br>
-		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle"></textarea>
-		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle"></textarea>
-		<!--div>\(M_0=\)  <textarea id='matrix_M' style="width:3cm;height:3cm;vertical-align:middle"></textarea></div-->
+		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
+		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
 		<br><br><button id='button' onclick="">Вычислить \(x\)</button><br><br>
 		<div id="output"></div>
 	</body>
