--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src='script/matrix.js'></script>
 		<script src='script/method_selection.js'></script>
 		<script src='script/check_input.js'></script>
+		<script src='script/random_input.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
@@ -19,6 +20,7 @@
 		</select><br><br>
 		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
 		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
+		<button onclick="random_input('matrix_A','vector_b',20)">random()</button>
 		<br><br><button id='button' onclick="">Вычислить \(x\)</button><br><br>
 		<div id="output"></div>
 	</body>
