--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 		<script src='script/method_selection.js'></script>
 		<script src='script/check_input.js'></script>
 		<script src='script/random_input.js'></script>
+		<script src='script/complex_number.js'></script>
+		<script src='script/sqrt_method.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
 		Система \(Ax=b\).<br>
 		Метод решения:
-		<select onchange="select_method(this,'button')">
+		<select onchange="select_method(this,'button','random')">
 			<option value=''>&mdash;</option>
 			<option value='casual_gaus()'>Обычный метод Гаусса</option>
 			<option value='LU_transform()'>Через LU разложение</option>
+			<option value='sqrt_method()'>Метод квадратного корня</option>
 		</select><br><br>
 		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
 		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
-		<button onclick="random_input('matrix_A','vector_b',20)">random()</button>
+		<button id='random' onclick="">random()</button>
 		<br><br><button id='button' onclick="">Вычислить \(x\)</button><br><br>
 		<div id="output"></div>
 	</body>
