--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src='script/random_input.js'></script>
 		<script src='script/complex_number.js'></script>
 		<script src='script/sqrt_method.js'></script>
+		<script src='script/slau.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
