--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="style.css"></link>
 		<script src='script/casual_gaus.js'></script>
 		<script src='script/LU_transform.js'></script>
+		<script src='script/QR_transform.js'></script>
 		<script src='script/matrix.js'></script>
 		<script src='script/method_selection.js'></script>
 		<script src='script/check_input.js'></script>
@@ -21,7 +22,7 @@
 			<option value='casual_gaus(digits.value)'>Обычный метод Гаусса</option>
 			<option value='LU_transform(digits.value)'>Через LU разложение</option>
 			<option value='sqrt_method(digits.value)'>Метод квадратного корня</option>
-			<option value='QR_transform(digits.value)'>Метод квадратного корня</option>
+			<option value='QR_transform(digits.value)'>Через QR разложение</option>
 		</select><br><br>
 		Знаков после запятой<textarea style="font-size:25;margin-left:1cm;width=1cm" type="number" id="digits" value="3">
 		</textarea><br><br>
