--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src='script/complex_number.js'></script>
 		<script src='script/sqrt_method.js'></script>
 		<script src='script/slau.js'></script>
+		<script src='script/edging_method.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
@@ -21,6 +22,7 @@
 			<option value='casual_gaus()'>Обычный метод Гаусса</option>
 			<option value='LU_transform()'>Через LU разложение</option>
 			<option value='sqrt_method()'>Метод квадратного корня</option>
+			<option value='edging_method()'>Метод окаймления</option>
 		</select><br><br>
 		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
 		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
