--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<option value='LU_transform(digits.value)'>Через LU разложение</option>
 			<option value='sqrt_method(digits.value)'>Метод квадратного корня</option>
 			<option value='QR_transform(digits.value)'>Через QR разложение</option>
-			<option value='edging_method()'>Метод окаймления</option>
+			<option value='edging_method(digits.value)'>Метод окаймления</option>
 		</select><br><br>
 		Знаков после запятой<textarea style="font-size:25;margin-left:1cm;width=1cm" type="number" id="digits" value="3">
 		</textarea><br><br>
