--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src='script/sqrt_method.js'></script>
 		<script src='script/slau.js'></script>
 		<script src='script/edging_method.js'></script>
+		<script src='script/zeydel.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
@@ -26,6 +27,7 @@
 			<option value='QR_transform(digits.value)'>Через QR разложение</option>
 			<option value='edging_method(digits.value)'>Метод окаймления</option>
 			<option value='simple_iteration(digits.value)'>Метод простой итерации</option>
+			<option value='zeydel_iteration(digits.value)'>Метод Зейделя</option>
 		</select><br><br>
 		Знаков после запятой<textarea style="font-size:25;margin-left:1cm;width:1cm;vertical-align:middle" type="number" id="digits" value="3">
 		</textarea><br><br>
