--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src='script/slau.js'></script>
 		<script src='script/edging_method.js'></script>
 		<script src='script/zeydel.js'></script>
+		<script src='script/simple_iteration.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
