--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src='script/zeydel.js'></script>
 		<script src='script/simple_iteration.js'></script>
 		<script src='script/gradient.js'></script>
+		<script src='script/sample_code.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
