--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src='script/gradient.js'></script>
 		<script src='script/relaxation.js'></script>
 		<script src='script/sample_code.js'></script>
+		<script src='script/rotation.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
@@ -34,6 +35,7 @@
 			<option value='zeydel_iteration(digits.value)'>Метод Зейделя</option>
 			<option value='relaxation_iteration(digits.value)'>Метод релаксации</option>
 			<option value='gradient_iteration(digits.value)'>Метод градиентного спуска</option>
+			<option value='rotation_iteration(digits.value)'>Метод вращения (соб.ч.)</option>
 		</select><br><br>
 		Знаков после запятой<input type='number' style="font-size:25;margin-left:1cm;width:1cm;vertical-align:middle" type="number" id="digits" value="3">
 		</input><br><br>
@@ -53,7 +55,7 @@
 		</table>
 		<br>
 		\(A =\) <textarea id='matrix_A' style="width:3cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
-		\(b =\) <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
+		<span id='b='>\(b =\)</span> <textarea id='vector_b' style="width:1cm;height:3cm;vertical-align:middle;font-size:30"></textarea>
 		<button id='random' onclick="">random()</button>
 		<br><br><button id='button' onclick="">Вычислить \(x\)</button><br><br>
 		<div id="output"></div>
