--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src='script/relaxation.js'></script>
 		<script src='script/sample_code.js'></script>
 		<script src='script/rotation.js'></script>
+		<script src='script/richardson.js'></script>
 		<script src='script/simple_iteration_2.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
@@ -36,6 +37,7 @@
 			<option value='zeydel_iteration(digits.value)'>Метод Зейделя</option>
 			<option value='relaxation_iteration(digits.value)'>Метод релаксации</option>
 			<option value='gradient_iteration(digits.value)'>Метод градиентного спуска</option>
+			<option value='richardson_iteration(digits.value)'>Метод Ричардсона</option>
 			<option value='rotation_iteration(digits.value)'>Метод вращения (соб.ч.)</option>
 			<option value='simple_iteration_2(digits.value)'>Метод простой итерации (соб.ч.)</option>
 		</select><br><br>
