--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src='script/rotation.js'></script>
 		<script src='script/richardson.js'></script>
 		<script src='script/simple_iteration_2.js'></script>
+		<script src='script/invert_iteration.js'></script>
 		<script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	</head>
 	<body>
@@ -40,6 +41,7 @@
 			<option value='richardson_iteration(digits.value)'>Метод Ричардсона</option>
 			<option value='rotation_iteration(digits.value)'>Метод вращения (соб.ч.)</option>
 			<option value='simple_iteration_2(digits.value)'>Метод простой итерации (соб.ч.)</option>
+			<option value='invert_iteration(digits.value)'>Метод обратной итерации (соб.ч.)</option>
 		</select><br><br>
 		Знаков после запятой<input type='number' style="font-size:25;margin-left:1cm;width:1cm;vertical-align:middle" type="number" id="digits" value="3">
 		</input><br><br>
